<?xml version="1.0" encoding="UTF-8" ?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
>
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.1</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>jojotv</groupId>
	<artifactId>Another-MP3-Player</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Another-MP3-Player</name>

	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>25</java.version>
	</properties>
	<dependencies>

		<!-- https://mvnrepository.com/artifact/com.mpatric/mp3agic -->
        <dependency>
            <groupId>com.mpatric</groupId>
            <artifactId>mp3agic</artifactId>
            <version>0.9.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javazoom/jlayer -->
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>jlayer</artifactId>
            <version>1.0.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.jthink/jaudiotagger -->
        <dependency>
            <groupId>net.jthink</groupId>
            <artifactId>jaudiotagger</artifactId>
            <version>3.0.1</version>
        </dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>21.0.6</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>21.0.6</version>
		</dependency>

		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.2.1</version>
		</dependency>

		<!-- Source: https://mvnrepository.com/artifact/net.yetihafen/javafx-customcaption -->
		<dependency>
			<groupId>net.yetihafen</groupId>
			<artifactId>javafx-customcaption</artifactId>
			<version>1.0.3</version>
			<scope>compile</scope>
		</dependency>

		<!-- Source: https://mvnrepository.com/artifact/eu.iamgio/animated -->
		<dependency>
			<groupId>eu.iamgio</groupId>
			<artifactId>animated</artifactId>
			<version>1.3.0</version>
			<scope>compile</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--enable-native-access=javafx.graphics --enable-native-access=ALL-UNNAMED</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
